--- a/RB.ipynb
+++ b/RB.ipynb
@@ -542,24 +542,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['ATT', 'Rushing_Yds', 'Rushing_Td', 'FPTS/G', 'YBCON'], dtype='object')\n",
-      "<class 'sklearn.linear_model._base.LinearRegression'>\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "0.010343054681317854"
+       "{'mean mse': 0.010343054681317854,\n",
+       " 'model': LinearRegression(),\n",
+       " 'features': Index(['ATT', 'Rushing_Yds', 'Rushing_Td', 'FPTS/G', 'YBCON'], dtype='object')}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
