Added MLP to potential modeling

--- a/rookie_data.ipynb
+++ b/rookie_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        "[5 rows x 53 columns]"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,26 +282,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "147\n",
-      "Index(['Pick', 'passing_20+', 'rushing_20+', 'receiving_Rec FUM',\n",
-      "       'downs_Scrm Plys'],\n",
-      "      dtype='object')\n"
+      "7.874367828691651\n"
      ]
     },
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pick</th>\n",
+       "      <th>passing_20+</th>\n",
+       "      <th>rushing_20+</th>\n",
+       "      <th>receiving_Rec FUM</th>\n",
+       "      <th>downs_Scrm Plys</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-1.330440</td>\n",
+       "      <td>-0.505987</td>\n",
+       "      <td>0.448670</td>\n",
+       "      <td>0.578498</td>\n",
+       "      <td>-0.626478</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.871814</td>\n",
+       "      <td>-0.979143</td>\n",
+       "      <td>1.233842</td>\n",
+       "      <td>0.578498</td>\n",
+       "      <td>-0.499489</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.055469</td>\n",
+       "      <td>-0.222094</td>\n",
+       "      <td>0.710394</td>\n",
+       "      <td>-0.471368</td>\n",
+       "      <td>0.160852</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.211386</td>\n",
+       "      <td>-0.127462</td>\n",
+       "      <td>0.972118</td>\n",
+       "      <td>-0.471368</td>\n",
+       "      <td>-1.185229</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.338105</td>\n",
+       "      <td>-0.600618</td>\n",
+       "      <td>-0.598227</td>\n",
+       "      <td>-0.471368</td>\n",
+       "      <td>-0.296307</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "7.874816881021796"
+       "       Pick  passing_20+  rushing_20+  receiving_Rec FUM  downs_Scrm Plys\n",
+       "0 -1.330440    -0.505987     0.448670           0.578498        -0.626478\n",
+       "1  1.871814    -0.979143     1.233842           0.578498        -0.499489\n",
+       "2 -0.055469    -0.222094     0.710394          -0.471368         0.160852\n",
+       "3  0.211386    -0.127462     0.972118          -0.471368        -1.185229\n",
+       "4  1.338105    -0.600618    -0.598227          -0.471368        -0.296307"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,31 +382,110 @@
    "source": [
     "features, labels = football.prepRookieData(WR_rookie_data, standardize= True)\n",
     "\n",
-    "print(len(features))\n",
+    "WR_best_feats = football.getBestFeatures(features, labels, numFeatures=5, numFolds=3)\n",
     "\n",
-    "football.getBestFeatures(features, labels, numFeatures=5, numFolds=3)"
+    "print(WR_best_feats[\"mean mse\"])\n",
+    "\n",
+    "WR_features = features[WR_best_feats[\"features\"]]\n",
+    "\n",
+    "WR_features.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "81\n",
-      "Index(['Pick', 'passing_INT', 'rushing_YPC', 'downs_4th Md', 'downs_Rec 1st%'], dtype='object')\n"
+      "3.471426604264483\n"
      ]
     },
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pick</th>\n",
+       "      <th>passing_INT</th>\n",
+       "      <th>rushing_YPC</th>\n",
+       "      <th>downs_4th Md</th>\n",
+       "      <th>downs_Rec 1st%</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.612395</td>\n",
+       "      <td>0.873172</td>\n",
+       "      <td>0.208290</td>\n",
+       "      <td>-0.041593</td>\n",
+       "      <td>1.023814</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-1.638576</td>\n",
+       "      <td>1.475959</td>\n",
+       "      <td>-0.859527</td>\n",
+       "      <td>-0.347866</td>\n",
+       "      <td>1.723847</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-1.291253</td>\n",
+       "      <td>-1.537974</td>\n",
+       "      <td>-0.859527</td>\n",
+       "      <td>1.796050</td>\n",
+       "      <td>-0.576262</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.887408</td>\n",
+       "      <td>1.475959</td>\n",
+       "      <td>-0.645964</td>\n",
+       "      <td>-0.347866</td>\n",
+       "      <td>-1.201291</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-1.243891</td>\n",
+       "      <td>1.676888</td>\n",
+       "      <td>-0.218837</td>\n",
+       "      <td>-0.347866</td>\n",
+       "      <td>-0.201244</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "3.655494509620825"
+       "       Pick  passing_INT  rushing_YPC  downs_4th Md  downs_Rec 1st%\n",
+       "0 -0.612395     0.873172     0.208290     -0.041593        1.023814\n",
+       "1 -1.638576     1.475959    -0.859527     -0.347866        1.723847\n",
+       "2 -1.291253    -1.537974    -0.859527      1.796050       -0.576262\n",
+       "3  0.887408     1.475959    -0.645964     -0.347866       -1.201291\n",
+       "4 -1.243891     1.676888    -0.218837     -0.347866       -0.201244"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,31 +493,110 @@
    "source": [
     "features, labels = football.prepRookieData(TE_rookie_data, standardize= True)\n",
     "\n",
-    "print(len(features))\n",
+    "TE_best_feats = football.getBestFeatures(features, labels, numFeatures=5, numFolds=3)\n",
     "\n",
-    "football.getBestFeatures(features, labels, numFeatures=5, numFolds=3)"
+    "print(TE_best_feats[\"mean mse\"])\n",
+    "\n",
+    "TE_features = features[TE_best_feats[\"features\"]]\n",
+    "\n",
+    "TE_features.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "56\n",
-      "Index(['Pick', 'passing_TD', 'passing_Rate', 'passing_Sck', 'passing_SckY'], dtype='object')\n"
+      "33.58744514041856\n"
      ]
     },
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pick</th>\n",
+       "      <th>passing_TD</th>\n",
+       "      <th>passing_Rate</th>\n",
+       "      <th>passing_Sck</th>\n",
+       "      <th>passing_SckY</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.956171</td>\n",
+       "      <td>-0.762030</td>\n",
+       "      <td>-1.107087</td>\n",
+       "      <td>1.083541</td>\n",
+       "      <td>0.884419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.642640</td>\n",
+       "      <td>2.222144</td>\n",
+       "      <td>1.094258</td>\n",
+       "      <td>-2.267877</td>\n",
+       "      <td>-2.122262</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.047698</td>\n",
+       "      <td>-0.165195</td>\n",
+       "      <td>-1.088666</td>\n",
+       "      <td>-1.121339</td>\n",
+       "      <td>-0.784427</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.661128</td>\n",
+       "      <td>1.625309</td>\n",
+       "      <td>1.444263</td>\n",
+       "      <td>-1.650510</td>\n",
+       "      <td>-1.929172</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.928907</td>\n",
+       "      <td>-0.463613</td>\n",
+       "      <td>-0.278129</td>\n",
+       "      <td>0.642565</td>\n",
+       "      <td>0.305151</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "34.581901962370544"
+       "       Pick  passing_TD  passing_Rate  passing_Sck  passing_SckY\n",
+       "0 -0.956171   -0.762030     -1.107087     1.083541      0.884419\n",
+       "1 -0.642640    2.222144      1.094258    -2.267877     -2.122262\n",
+       "2  1.047698   -0.165195     -1.088666    -1.121339     -0.784427\n",
+       "3  1.661128    1.625309      1.444263    -1.650510     -1.929172\n",
+       "4 -0.928907   -0.463613     -0.278129     0.642565      0.305151"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,33 +604,110 @@
    "source": [
     "features, labels = football.prepRookieData(QB_rookie_data, standardize= True)\n",
     "\n",
-    "print(len(features))\n",
+    "QB_best_feats = football.getBestFeatures(features, labels, numFeatures=5, numFolds=3)\n",
     "\n",
-    "football.getBestFeatures(features, labels, numFeatures=5, numFolds=3)"
+    "print(QB_best_feats[\"mean mse\"])\n",
+    "\n",
+    "QB_features = features[QB_best_feats[\"features\"]]\n",
+    "\n",
+    "QB_features.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "108\n",
-      "Index(['Pick', 'passing_Yds/Att', 'passing_SckY', 'receiving_TD',\n",
-      "       'receiving_Rec FUM'],\n",
-      "      dtype='object')\n"
+      "11.222411825926992\n"
      ]
     },
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pick</th>\n",
+       "      <th>passing_Yds/Att</th>\n",
+       "      <th>passing_SckY</th>\n",
+       "      <th>receiving_TD</th>\n",
+       "      <th>receiving_Rec FUM</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.760314</td>\n",
+       "      <td>-1.492481</td>\n",
+       "      <td>0.838394</td>\n",
+       "      <td>-0.070870</td>\n",
+       "      <td>1.166900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-1.662004</td>\n",
+       "      <td>0.270742</td>\n",
+       "      <td>0.552171</td>\n",
+       "      <td>0.665085</td>\n",
+       "      <td>0.046676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.053990</td>\n",
+       "      <td>2.033965</td>\n",
+       "      <td>-0.320808</td>\n",
+       "      <td>1.106657</td>\n",
+       "      <td>0.046676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.283517</td>\n",
+       "      <td>-0.610870</td>\n",
+       "      <td>0.280260</td>\n",
+       "      <td>-0.659633</td>\n",
+       "      <td>0.606788</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.929729</td>\n",
+       "      <td>1.593159</td>\n",
+       "      <td>-0.149074</td>\n",
+       "      <td>-1.395588</td>\n",
+       "      <td>-1.073548</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "12.80884912624546"
+       "       Pick  passing_Yds/Att  passing_SckY  receiving_TD  receiving_Rec FUM\n",
+       "0 -0.760314        -1.492481      0.838394     -0.070870           1.166900\n",
+       "1 -1.662004         0.270742      0.552171      0.665085           0.046676\n",
+       "2 -0.053990         2.033965     -0.320808      1.106657           0.046676\n",
+       "3  1.283517        -0.610870      0.280260     -0.659633           0.606788\n",
+       "4  1.929729         1.593159     -0.149074     -1.395588          -1.073548"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,9 +715,13 @@
    "source": [
     "features, labels = football.prepRookieData(RB_rookie_data, standardize= True)\n",
     "\n",
-    "print(len(features))\n",
+    "RB_best_feats = football.getBestFeatures(features, labels, numFeatures=5, numFolds=3)\n",
     "\n",
-    "football.getBestFeatures(features, labels, numFeatures=5, numFolds=3)"
+    "print(RB_best_feats[\"mean mse\"])\n",
+    "\n",
+    "RB_features = features[RB_best_feats[\"features\"]]\n",
+    "\n",
+    "RB_features.head()"
    ]
   }
  ],
