--- a/TE.ipynb
+++ b/TE.ipynb
@@ -542,7 +542,7 @@
     }
    ],
    "source": [
-    "all_TE = [TE_2021, TE_2020, TE_2019, TE_2018,\n",
+    "all_TE = [TE_2020, TE_2019, TE_2018,\n",
     "          TE_2017, TE_2016, TE_2015, TE_2014, TE_2013]\n",
     "\n",
     "TE = pd.concat(all_TE, ignore_index=True)\n",
@@ -576,10 +576,22 @@
     "# Dean's feature selection:\n",
     "\n",
     "y = TE['y']\n",
-    "X = TE.drop(['y'], axis=1)\n",
+    "X = TE.drop(['y', 'FPTS/G'], axis=1)\n",
     "\n",
-    "mean_mse = football.getBestFeatures(X, y)\n",
-    "mean_mse"
+    "info = football.getBestFeatures(X, y)\n",
+    "info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coefficients = info[\"coefficients\"]\n",
+    "features = info['features']\n",
+    "test_y = TE_2021['y']\n",
+    "test_x = TE_2021[features]"
    ]
   }
  ],
