added name to results

--- a/TE.ipynb
+++ b/TE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,24 +37,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "TE_2021 = football.prepare_TE(\"2021\")\n",
-    "TE_2020 = football.prepare_TE(\"2020\")\n",
-    "TE_2019 = football.prepare_TE(\"2019\")\n",
-    "TE_2018 = football.prepare_TE(\"2018\")\n",
-    "TE_2017 = football.prepare_TE(\"2017\")\n",
-    "TE_2016 = football.prepare_TE(\"2016\")\n",
-    "TE_2015 = football.prepare_TE(\"2015\")\n",
-    "TE_2014 = football.prepare_TE(\"2014\")\n",
-    "TE_2013 = football.prepare_TE(\"2013\")"
+    "TE_2021 = football.prepare_TE(\"2021\", True)\n",
+    "TE_2020 = football.prepare_TE(\"2020\", False)\n",
+    "TE_2019 = football.prepare_TE(\"2019\", False)\n",
+    "TE_2018 = football.prepare_TE(\"2018\", False)\n",
+    "TE_2017 = football.prepare_TE(\"2017\", False)\n",
+    "TE_2016 = football.prepare_TE(\"2016\", False)\n",
+    "TE_2015 = football.prepare_TE(\"2015\", False)\n",
+    "TE_2014 = football.prepare_TE(\"2014\", False)\n",
+    "TE_2013 = football.prepare_TE(\"2013\", False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -580,19 +580,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "test_y = pd.DataFrame()\n",
     "coefficients = info[\"coefficients\"]\n",
     "features = info['features']\n",
-    "test_y = TE_2021['y']\n",
+    "test_y['player'] = TE_2021['Player']\n",
+    "test_y['y'] = TE_2021['y']\n",
     "test_x = TE_2021[features]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,19 +604,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "results = pd.DataFrame()\n",
-    "results['actual'] = test_y\n",
+    "results['player'] = test_y['player']\n",
+    "results['actual'] = test_y['y']\n",
     "results['predictions'] = predictions\n",
     "results['difference'] = results['actual'] - results['predictions']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
